# mdsp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  mdsp.pro
inc/mdsp/qt/: mainwindow.h  plot_qt.h
lib/mdsp/qt/: CMakeLists.txt  mainwindow.cpp  plot_qt.cpp
src/: complexplot.cpp  complexplot.h  demo_qt.cpp  mainwindow.cpp  mainwindow.h  test.cpp
